# kek-monitors

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  app.py  footdistrict.py  init.py  monitor_manager.py  monitor_manager_cli.py  requirements.txt  sanitizer.py  setup.cfg  setup.py  setup.sh  sfootdistrict.py  stop_moman.py  stop_moman.sh  testprice.py
configs/: .gitignore  config.py
demo/: footdistrict_monitor.py  footdistrict_scraper.py  requirements.txt  sfootdistrict_scraper.py
kekmonitors/: app.py  base_common.py  base_monitor.py  base_price_monitor.py  base_scraper.py  config.py  default_config.cfg  discord_embeds.py  exceptions.py  init.py  monitor_manager.py  monitor_manager_cli.py  shoe_manager.py  shoe_stuff.py  webhook_manager.py
kekmonitors/comms/: msg.py  server.py
kekmonitors/utils/: common_base.py  discord_embeds.py  list_db.py  network_utils.py  reset_db.py  shoe_manager.py  shoe_stuff.py  stop_moman.py  tools.py  webhook_manager.py
kekmonitors/utils/server/: msg.py  server.py
monitors/: base_monitor.py  footdistrict.py  my_website.py
scrapers/: base_scraper.py  footdistrict.py  my_website.py
t/: monitor.py  scraper.py
tests/: test_config.py  test_shoe.py  utils.py
utils/: common_base.py  discord_embeds.py  list_db.py  network_utils.py  reset_db.py  shoe_manager.py  shoe_stuff.py  tools.py  webhook_manager.py
utils/server/: msg.py  server.py
