[metadata]
name = kekmonitors
version = 0.1.0
url = https://github.com/berton7/kekmonitors
author = berton7
author_email = francy.berton99@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
description = Open source codebase for development of sneakers monitors
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
install_requires=
	discord.py
	tornado
	requests
	pycurl
	watchdog
	pymongo
	aiohttp[speedups]

[options.package_data]
* = default_config.cfg
